src/main/java/com/omnetpp/omnetpp_plugin/ned/grammar/Ned.bnf
{
  lexerClass="com.omnetpp.omnetpp_plugin.NedLexer"
  parserClass="com.omnetpp.omnetpp_plugin.parser.NedParser"
  //extends="com.intellij.extapi.psi.ASTWrapperPsiElement"
  extends="com.omnetpp.omnetpp_plugin.ned.psi.impl.NedPsiElementImpl"
  psiClassPrefix="Ned"
  psiImplClassSuffix="Impl"
  psiPackage="com.omnetpp.omnetpp_plugin.ned.psi"
  psiImplPackage="com.omnetpp.omnetpp_plugin.ned.psi.impl"
  elementTypeHolderClass="com.omnetpp.omnetpp_plugin.ned.psi.NedTypes"
  elementTypeClass="com.omnetpp.omnetpp_plugin.ned.psi.NedElementType"
  tokenTypeClass="com.omnetpp.omnetpp_plugin.ned.psi.NedTokenType"
  psiImplUtilClass="com.omnetpp.omnetpp_plugin.ned.psi.impl.NedPsiImplUtil"


  tokens = [
      LINE_COMMENT = "//.*"
      BLOCK_COMMENT = "/\\*([^*]|\\*+[^*/])*\\*/"
    ]

}

nedfile ::= definitions?


definitions ::= definition+


definition ::= packagedeclaration
             | import_def
             | propertydecl
             | fileproperty
             | channeldefinition
             | channelinterfacedefinition
             | simplemoduledefinition
             | compoundmoduledefinition
             | networkdefinition
             | moduleinterfacedefinition
             | SEMI


packagedeclaration ::= PACKAGE dottedname SEMI

dottedname ::= NAME (DOT NAME)*

//dottedname ::= dottedname DOT NAME
             //| NAME


import_def ::= KW_IMPORT importspec SEMI

importspec ::= importname (DOT importname)*

importname ::= (NAME | "*" | "**")+

propertydecl ::= propertydecl_header opt_inline_properties SEMI
               | propertydecl_header LPAREN opt_propertydecl_keys RPAREN opt_inline_properties SEMI

//propertydecl_header ::= (PROPERTY AT NAME | PROPERTY AT NAME LBRACK RBRACK)
propertydecl_header ::=  (PROPERTY AT NAME (LBRACK RBRACK)?)

opt_propertydecl_keys ::= propertydecl_keys?

propertydecl_keys ::= propertydecl_key (SEMI propertydecl_key)*


propertydecl_key ::= property_literal

fileproperty ::= property_namevalue SEMI

property_namevalue ::= property_name (LPAREN opt_property_keys RPAREN)?

//inet

property_name ::= AT NAME (LBRACK prop_index RBRACK)?

private prop_index ::= prop_index_word (DOT prop_index_word)* MUL?

private prop_index_word ::= NAME
    | SUBMODULEDEF | GATESDEF | CHANNEL | PARAMETERS | TYPES
    | KW_CONNECTIONS | SIMPLE | MODULE | NETWORK | MODULEINTERFACE
    | CHANNELINTERFACE | ALLOWUNCONNECTED | FOR | IF | EXTENDS | LIKE
    | DEFAULT | ASK | TYPENAME | EXISTS | SIZEOF | INDEX | THIS | PARENT
    | VOLATILE | INPUT | OUTPUT | INOUT
    | DOUBLE | INT | STRING | BOOL | OBJECTDEF | XML | XMLDOC
    | TRUE | FALSE | NAN | INF | NULL | NULLPTR | UNDEFINED


opt_property_keys ::= property_keys?


property_keys ::= property_key (SEMI property_key)*



property_key ::= property_literal ASSIGN property_values
               | property_values

property_values ::= property_value (COMMA property_value)*

property_value ::= property_value_atom*

private property_value_atom ::= property_literal
                               | LPAREN property_value_inner RPAREN
                               | LBRACK property_value_inner RBRACK

private property_value_inner ::= (property_value_atom | COMMA | SEMI)*


//property_literal ::= (CHAR | STRINGCONSTANT)+
property_literal ::= (CHAR | STRINGCONSTANT | NAME | COLONCOLON
                     | DOUBLE | INT | STRING | BOOL | OBJECTDEF | XML
                     | XMLDOC | TRUE | FALSE | NAN | INF
                     | HT | INTCONSTANT | REALCONSTANT
                     | MODULE | NETWORK | SIMPLE | CHANNEL | CHANNELINTERFACE
                     | MODULEINTERFACE | PARAMETERS | SUBMODULEDEF | GATESDEF
                     | TYPES | KW_CONNECTIONS | FOR | IF | EXTENDS | LIKE
                     | DEFAULT | ASK | TYPENAME | EXISTS | SIZEOF | INDEX
                     | THIS | PARENT | VOLATILE | INPUT | OUTPUT | INOUT
                     | ALLOWUNCONNECTED | NULL | NULLPTR | UNDEFINED
                     | QUESTION | MINUS
                     | PLUS | MUL | DIV | MOD | POWER
                     | DOT | COLON | DOLLAR
                     | LT | GT | LE | GE | EQ | NE
                     | NOT | AND | OR )+

channeldefinition ::= channelheader LBRACE opt_paramblock RBRACE

channelheader ::= CHANNEL NAME opt_inheritance {
  mixin="com.omnetpp.omnetpp_plugin.ned.psi.impl.NedNamedElementImpl"
  implements="com.omnetpp.omnetpp_plugin.ned.psi.NedNamedElement"
  methods=[getName setName getNameIdentifier]
}

opt_inheritance ::= inheritance?

inheritance ::= EXTENDS extendsname (LIKE likenames)?
               | LIKE likenames


extendsname ::= dottedname

likenames ::= likename (COMMA likename)*

likename ::= dottedname

channelinterfacedefinition ::= channelinterfaceheader LBRACE opt_paramblock RBRACE

channelinterfaceheader ::= CHANNELINTERFACE NAME opt_interfaceinheritance

opt_interfaceinheritance ::= (EXTENDS extendsnames)?


extendsnames ::= extendsname (COMMA extendsname)*

simplemoduledefinition ::= simplemoduleheader LBRACE opt_paramblock opt_gateblock RBRACE

simplemoduleheader ::= SIMPLE NAME opt_inheritance {
  mixin="com.omnetpp.omnetpp_plugin.ned.psi.impl.NedNamedElementImpl"
  implements="com.omnetpp.omnetpp_plugin.ned.psi.NedNamedElement"
  methods=[getName setName getNameIdentifier]
}



compoundmoduledefinition ::= compoundmoduleheader LBRACE opt_paramblock opt_gateblock opt_typeblock opt_submodblock opt_connblock RBRACE

compoundmoduleheader ::= MODULE NAME opt_inheritance {
  mixin="com.omnetpp.omnetpp_plugin.ned.psi.impl.NedNamedElementImpl"
  implements="com.omnetpp.omnetpp_plugin.ned.psi.NedNamedElement"
  methods=[getName setName getNameIdentifier]
}


networkdefinition ::= networkheader LBRACE opt_paramblock opt_gateblock opt_typeblock opt_submodblock opt_connblock RBRACE

networkheader ::= NETWORK NAME opt_inheritance {
  mixin="com.omnetpp.omnetpp_plugin.ned.psi.impl.NedNamedElementImpl"
  implements="com.omnetpp.omnetpp_plugin.ned.psi.NedNamedElement"
  methods=[getName setName getNameIdentifier]
}

moduleinterfacedefinition ::= moduleinterfaceheader LBRACE opt_paramblock opt_gateblock RBRACE

moduleinterfaceheader ::= MODULEINTERFACE NAME opt_interfaceinheritance {
  mixin="com.omnetpp.omnetpp_plugin.ned.psi.impl.NedNamedElementImpl"
  implements="com.omnetpp.omnetpp_plugin.ned.psi.NedNamedElement"
  methods=[getName setName getNameIdentifier]
}

opt_paramblock ::= (PARAMETERS COLON)? opt_params


opt_params ::= params?


params ::= paramsitem+

paramsitem ::= param
             | fileproperty

param ::= param_typenamevalue
        | parampattern_value

param_typenamevalue ::= param_typename opt_inline_properties (ASSIGN paramvalue opt_inline_properties)? SEMI

param_typename ::= opt_volatile paramtype NAME
                 | NAME

parampattern_value ::= parampattern opt_inline_properties ASSIGN paramvalue SEMI

paramtype ::= DOUBLE
            | INT
            | STRING
            | BOOL
            | OBJECTDEF //object
            | XML

opt_volatile ::= VOLATILE?


paramvalue ::= DEFAULT (LPAREN expression RPAREN)?
             | ASK
             | expression


opt_inline_properties ::= inline_properties?


inline_properties ::= property_namevalue+

parampattern ::= pattern_elem DOT pattern_tail

private pattern_tail ::= TYPENAME
                        | pattern_elem DOT pattern_tail
                        | pattern_elem



//pattern_elem ::= pattern_name
               //| pattern_name LBRACK pattern_index RBRACK
               //| pattern_name LBRACK "*" RBRACK
               //| "**"

pattern_elem ::= pattern_name ((LBRACK pattern_index RBRACK)|(LBRACK "*" RBRACK))?
               | "**"


pattern_name ::= pattern_atom (NAME | LBRACE pattern_index RBRACE | "*")*
pattern_atom  ::= NAME (DOLLAR NAME)?
                | CHANNEL
                | LBRACE pattern_index RBRACE
                | "*"


pattern_index ::= INTCONSTANT ((DOTDOT)(INTCONSTANT)?)?
                | DOTDOT INTCONSTANT

opt_gateblock ::= gateblock?


gateblock ::= GATESDEF COLON opt_gates

opt_gates ::= gates?


gates ::= gate+

gate ::= gate_typenamesize opt_inline_properties SEMI

gate_typenamesize ::= gatetype NAME ((LBRACK RBRACK)|(vector))?
                    | NAME ((LBRACK RBRACK)|(vector))?

gatetype ::= INPUT
           | OUTPUT
           | INOUT
opt_typeblock ::= typeblock?


typeblock ::= TYPES COLON opt_localtypes

opt_localtypes ::= localtypes?


localtypes ::= localtype+

localtype ::= propertydecl
            | channeldefinition
            | channelinterfacedefinition
            | simplemoduledefinition
            | compoundmoduledefinition
            | networkdefinition
            | moduleinterfacedefinition
            | SEMI

opt_submodblock ::= submodblock?


submodblock ::= SUBMODULEDEF COLON opt_submodules

opt_submodules ::= submodules_section?


submodules_section ::= submodule+

submodule ::= submoduleheader SEMI
            | submoduleheader LBRACE opt_paramblock opt_gateblock RBRACE opt_semicolon

submoduleheader ::= submodulename COLON dottedname opt_condition
                  | submodulename COLON likeexpr LIKE dottedname opt_condition

//submodulename ::= NAME
                //| NAME vector

submodulename ::= NAME (LBRACK expression RBRACK)?

likeexpr ::= LT GT
           | LT DEFAULT LPAREN expression RPAREN GT
           | LT expression GT

opt_condition ::= condition?


//Connection block
opt_connblock ::= connblock?


connblock ::= KW_CONNECTIONS ALLOWUNCONNECTED COLON opt_connections
            | KW_CONNECTIONS COLON opt_connections

opt_connections ::= connectionsSection?


connectionsSection ::= connectionsitem+


connectionsitem ::= connectiongroup
                  | connection opt_loops_and_conditions SEMI

connectiongroup ::= opt_loops_and_conditions LBRACE connectionsSection RBRACE opt_semicolon

opt_loops_and_conditions ::= loops_and_conditions?


loops_and_conditions ::= loop_or_condition (COMMA loop_or_condition)*

loop_or_condition ::= loop
                    | condition

loop ::= FOR NAME ASSIGN expression DOTDOT expression

connection ::= leftgatespec ARROW (channelspec ARROW)? rightgatespec
             | leftgatespec LARROW (channelspec LARROW)? rightgatespec
             | leftgatespec BIARROW (channelspec BIARROW)? rightgatespec

leftgatespec ::= leftmod DOT leftgate
               | parentleftgate

leftmod ::= NAME (vector)?

leftgate ::= NAME opt_subgate ((vector)|("++"))?

parentleftgate ::= NAME opt_subgate ((vector)|("++"))?

rightgatespec ::= rightmod DOT rightgate
                | parentrightgate

rightmod ::= NAME (vector)?


rightgate ::= NAME opt_subgate ((vector)|("++"))?


parentrightgate ::= NAME opt_subgate ((vector)|("++"))?


opt_subgate ::= (DOLLAR NAME)?


channelspec ::= channelspec_header (LBRACE opt_paramblock RBRACE)?
              | LBRACE opt_paramblock RBRACE

channelspec_header ::= (NAME COLON)? dottedname
                     | (NAME COLON)? likeexpr LIKE dottedname
                     | NAME COLON


opt_channelname ::= (NAME COLON)?


condition ::= IF expression

vector ::= LBRACK expression RBRACK

expression ::= expr


expr ::= unaryExpr (binaryOp unaryExpr)* (QUESTION expr COLON expr)?

binaryOp ::= PLUS | MINUS | MUL | DIV | MOD | POWER
           | EQ | NE | LT | LE | GT | GE
           | LTGT | EQSQ
           | LAND | LOR | DHT
           | AND | OR | HT
           | LTLT | GTGT

unaryExpr ::= MINUS unaryExpr
            | NOT unaryExpr
            | "~" unaryExpr
            | primaryExpr

primaryExpr ::= primaryExprHead (DOT primaryExprTail)*

private primaryExprHead ::= functioncall
                           | simple_expr
                           | object
                           | array
                           | LPAREN expr RPAREN

private primaryExprTail ::= functioncall
                           | qname_elem


functioncall ::= funcname LPAREN opt_exprlist RPAREN

array ::= LBRACK RBRACK
        | LBRACK exprlist RBRACK
        | LBRACK exprlist COMMA RBRACK

object ::= LBRACE opt_keyvaluelist RBRACE
         | NAME LBRACE opt_keyvaluelist RBRACE
         | NAME "::" NAME LBRACE opt_keyvaluelist RBRACE
         | NAME "::" NAME "::" NAME LBRACE opt_keyvaluelist RBRACE
         | NAME "::" NAME "::" NAME "::" NAME LBRACE opt_keyvaluelist RBRACE

opt_exprlist ::= exprlist?


exprlist ::= expr (COMMA expr)*

opt_keyvaluelist ::= (keyvaluelist (COMMA)?)?


keyvaluelist ::= keyvalue (COMMA keyvalue)*

keyvalue ::= key COLON expr


key ::= STRINGCONSTANT
      | NAME
      | INTCONSTANT
      | REALCONSTANT
      | quantity
      | MINUS INTCONSTANT
      | MINUS REALCONSTANT
      | MINUS quantity
      | NAN
      | INF
      | TRUE
      | FALSE
      | NULL
      | NULLPTR

simple_expr ::= operator
              | qname_elem
              | literal

funcname ::= NAME
           | BOOL
           | INT
           | DOUBLE
           | STRING
           | OBJECTDEF //object
           | XML
           | XMLDOC

qname_elem ::= NAME (LBRACK expr RBRACK)?
             | THIS
             | PARENT
             | INDEX
             | TYPENAME

qname ::= qname_elem (DOT qname_elem | COLONCOLON qname_elem)*
operator ::= INDEX (LPAREN RPAREN)?
           | TYPENAME
           | EXISTS LPAREN qname RPAREN
           | SIZEOF LPAREN qname RPAREN

literal ::= stringliteral
          | boolliteral
          | numliteral
          | otherliteral

stringliteral ::= STRINGCONSTANT

boolliteral ::= TRUE
              | FALSE

numliteral ::= quantity
             | realconstant_ext
             | INTCONSTANT

//numliteral ::= INTCONSTANT
             //| realconstant_ext
             //| quantity

otherliteral ::= UNDEFINED
               | NULLPTR
               | NULL

//allows ex. 1s 34ms
//quantity ::= (INTCONSTANT NAME | realconstant_ext NAME )+

//doesnt allow 1s 34ms

quantity ::= (INTCONSTANT | realconstant_ext) NAME+


realconstant_ext ::= REALCONSTANT
                   | INF
                   | NAN

opt_semicolon ::= SEMI?
