src/main/gen/com/omnetpp/omnetpp_plugin/ned/parser/NedParser.java
// This is a generated file. Not intended for manual editing.
package com.omnetpp.omnetpp_plugin.ned.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.omnetpp.omnetpp_plugin.ned.psi.NedTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class NedParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return nedfile(b, l + 1);
  }

  /* ********************************************************** */
  // LBRACK RBRACK
  //         | LBRACK exprlist RBRACK
  //         | LBRACK exprlist COMMA RBRACK
  public static boolean array(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array")) return false;
    if (!nextTokenIs(b, LBRACK)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = parseTokens(b, 0, LBRACK, RBRACK);
    if (!r) r = array_1(b, l + 1);
    if (!r) r = array_2(b, l + 1);
    exit_section_(b, m, ARRAY, r);
    return r;
  }

  // LBRACK exprlist RBRACK
  private static boolean array_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACK);
    r = r && exprlist(b, l + 1);
    r = r && consumeToken(b, RBRACK);
    exit_section_(b, m, null, r);
    return r;
  }

  // LBRACK exprlist COMMA RBRACK
  private static boolean array_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACK);
    r = r && exprlist(b, l + 1);
    r = r && consumeTokens(b, 0, COMMA, RBRACK);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // PLUS | MINUS | MUL | DIV | MOD | POWER
  //            | EQ | NE | LT | LE | GT | GE
  //            | LTGT | EQSQ
  //            | LAND | LOR | DHT
  //            | AND | OR | HT
  //            | LTLT | GTGT
  public static boolean binaryOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binaryOp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINARY_OP, "<binary op>");
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    if (!r) r = consumeToken(b, MUL);
    if (!r) r = consumeToken(b, DIV);
    if (!r) r = consumeToken(b, MOD);
    if (!r) r = consumeToken(b, POWER);
    if (!r) r = consumeToken(b, EQ);
    if (!r) r = consumeToken(b, NE);
    if (!r) r = consumeToken(b, LT);
    if (!r) r = consumeToken(b, LE);
    if (!r) r = consumeToken(b, GT);
    if (!r) r = consumeToken(b, GE);
    if (!r) r = consumeToken(b, LTGT);
    if (!r) r = consumeToken(b, EQSQ);
    if (!r) r = consumeToken(b, LAND);
    if (!r) r = consumeToken(b, LOR);
    if (!r) r = consumeToken(b, DHT);
    if (!r) r = consumeToken(b, AND);
    if (!r) r = consumeToken(b, OR);
    if (!r) r = consumeToken(b, HT);
    if (!r) r = consumeToken(b, LTLT);
    if (!r) r = consumeToken(b, GTGT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // TRUE
  //               | FALSE
  public static boolean boolliteral(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolliteral")) return false;
    if (!nextTokenIs(b, "<boolliteral>", FALSE, TRUE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOLLITERAL, "<boolliteral>");
    r = consumeToken(b, TRUE);
    if (!r) r = consumeToken(b, FALSE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // channelheader LBRACE opt_paramblock RBRACE
  public static boolean channeldefinition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "channeldefinition")) return false;
    if (!nextTokenIs(b, CHANNEL)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = channelheader(b, l + 1);
    r = r && consumeToken(b, LBRACE);
    r = r && opt_paramblock(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, CHANNELDEFINITION, r);
    return r;
  }

  /* ********************************************************** */
  // CHANNEL NAME opt_inheritance
  public static boolean channelheader(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "channelheader")) return false;
    if (!nextTokenIs(b, CHANNEL)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CHANNEL, NAME);
    r = r && opt_inheritance(b, l + 1);
    exit_section_(b, m, CHANNELHEADER, r);
    return r;
  }

  /* ********************************************************** */
  // channelinterfaceheader LBRACE opt_paramblock RBRACE
  public static boolean channelinterfacedefinition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "channelinterfacedefinition")) return false;
    if (!nextTokenIs(b, CHANNELINTERFACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = channelinterfaceheader(b, l + 1);
    r = r && consumeToken(b, LBRACE);
    r = r && opt_paramblock(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, CHANNELINTERFACEDEFINITION, r);
    return r;
  }

  /* ********************************************************** */
  // CHANNELINTERFACE NAME opt_interfaceinheritance
  public static boolean channelinterfaceheader(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "channelinterfaceheader")) return false;
    if (!nextTokenIs(b, CHANNELINTERFACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CHANNELINTERFACE, NAME);
    r = r && opt_interfaceinheritance(b, l + 1);
    exit_section_(b, m, CHANNELINTERFACEHEADER, r);
    return r;
  }

  /* ********************************************************** */
  // channelspec_header (LBRACE opt_paramblock RBRACE)?
  //               | LBRACE opt_paramblock RBRACE
  public static boolean channelspec(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "channelspec")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CHANNELSPEC, "<channelspec>");
    r = channelspec_0(b, l + 1);
    if (!r) r = channelspec_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // channelspec_header (LBRACE opt_paramblock RBRACE)?
  private static boolean channelspec_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "channelspec_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = channelspec_header(b, l + 1);
    r = r && channelspec_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (LBRACE opt_paramblock RBRACE)?
  private static boolean channelspec_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "channelspec_0_1")) return false;
    channelspec_0_1_0(b, l + 1);
    return true;
  }

  // LBRACE opt_paramblock RBRACE
  private static boolean channelspec_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "channelspec_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && opt_paramblock(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, null, r);
    return r;
  }

  // LBRACE opt_paramblock RBRACE
  private static boolean channelspec_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "channelspec_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && opt_paramblock(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (NAME COLON)? dottedname
  //                      | (NAME COLON)? likeexpr LIKE dottedname
  //                      | NAME COLON
  public static boolean channelspec_header(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "channelspec_header")) return false;
    if (!nextTokenIs(b, "<channelspec header>", LT, NAME)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CHANNELSPEC_HEADER, "<channelspec header>");
    r = channelspec_header_0(b, l + 1);
    if (!r) r = channelspec_header_1(b, l + 1);
    if (!r) r = parseTokens(b, 0, NAME, COLON);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (NAME COLON)? dottedname
  private static boolean channelspec_header_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "channelspec_header_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = channelspec_header_0_0(b, l + 1);
    r = r && dottedname(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (NAME COLON)?
  private static boolean channelspec_header_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "channelspec_header_0_0")) return false;
    channelspec_header_0_0_0(b, l + 1);
    return true;
  }

  // NAME COLON
  private static boolean channelspec_header_0_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "channelspec_header_0_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, NAME, COLON);
    exit_section_(b, m, null, r);
    return r;
  }

  // (NAME COLON)? likeexpr LIKE dottedname
  private static boolean channelspec_header_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "channelspec_header_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = channelspec_header_1_0(b, l + 1);
    r = r && likeexpr(b, l + 1);
    r = r && consumeToken(b, LIKE);
    r = r && dottedname(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (NAME COLON)?
  private static boolean channelspec_header_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "channelspec_header_1_0")) return false;
    channelspec_header_1_0_0(b, l + 1);
    return true;
  }

  // NAME COLON
  private static boolean channelspec_header_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "channelspec_header_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, NAME, COLON);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // compoundmoduleheader LBRACE opt_paramblock opt_gateblock opt_typeblock opt_submodblock opt_connblock RBRACE
  public static boolean compoundmoduledefinition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compoundmoduledefinition")) return false;
    if (!nextTokenIs(b, MODULE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = compoundmoduleheader(b, l + 1);
    r = r && consumeToken(b, LBRACE);
    r = r && opt_paramblock(b, l + 1);
    r = r && opt_gateblock(b, l + 1);
    r = r && opt_typeblock(b, l + 1);
    r = r && opt_submodblock(b, l + 1);
    r = r && opt_connblock(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, COMPOUNDMODULEDEFINITION, r);
    return r;
  }

  /* ********************************************************** */
  // MODULE NAME opt_inheritance
  public static boolean compoundmoduleheader(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compoundmoduleheader")) return false;
    if (!nextTokenIs(b, MODULE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, MODULE, NAME);
    r = r && opt_inheritance(b, l + 1);
    exit_section_(b, m, COMPOUNDMODULEHEADER, r);
    return r;
  }

  /* ********************************************************** */
  // IF expression
  public static boolean condition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "condition")) return false;
    if (!nextTokenIs(b, IF)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IF);
    r = r && expression(b, l + 1);
    exit_section_(b, m, CONDITION, r);
    return r;
  }

  /* ********************************************************** */
  // KW_CONNECTIONS ALLOWUNCONNECTED COLON opt_connections
  //             | KW_CONNECTIONS COLON opt_connections
  public static boolean connblock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "connblock")) return false;
    if (!nextTokenIs(b, KW_CONNECTIONS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = connblock_0(b, l + 1);
    if (!r) r = connblock_1(b, l + 1);
    exit_section_(b, m, CONNBLOCK, r);
    return r;
  }

  // KW_CONNECTIONS ALLOWUNCONNECTED COLON opt_connections
  private static boolean connblock_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "connblock_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_CONNECTIONS, ALLOWUNCONNECTED, COLON);
    r = r && opt_connections(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // KW_CONNECTIONS COLON opt_connections
  private static boolean connblock_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "connblock_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_CONNECTIONS, COLON);
    r = r && opt_connections(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // leftgatespec ARROW (channelspec ARROW)? rightgatespec
  //              | leftgatespec LARROW (channelspec LARROW)? rightgatespec
  //              | leftgatespec BIARROW (channelspec BIARROW)? rightgatespec
  public static boolean connection(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "connection")) return false;
    if (!nextTokenIs(b, NAME)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = connection_0(b, l + 1);
    if (!r) r = connection_1(b, l + 1);
    if (!r) r = connection_2(b, l + 1);
    exit_section_(b, m, CONNECTION, r);
    return r;
  }

  // leftgatespec ARROW (channelspec ARROW)? rightgatespec
  private static boolean connection_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "connection_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = leftgatespec(b, l + 1);
    r = r && consumeToken(b, ARROW);
    r = r && connection_0_2(b, l + 1);
    r = r && rightgatespec(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (channelspec ARROW)?
  private static boolean connection_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "connection_0_2")) return false;
    connection_0_2_0(b, l + 1);
    return true;
  }

  // channelspec ARROW
  private static boolean connection_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "connection_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = channelspec(b, l + 1);
    r = r && consumeToken(b, ARROW);
    exit_section_(b, m, null, r);
    return r;
  }

  // leftgatespec LARROW (channelspec LARROW)? rightgatespec
  private static boolean connection_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "connection_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = leftgatespec(b, l + 1);
    r = r && consumeToken(b, LARROW);
    r = r && connection_1_2(b, l + 1);
    r = r && rightgatespec(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (channelspec LARROW)?
  private static boolean connection_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "connection_1_2")) return false;
    connection_1_2_0(b, l + 1);
    return true;
  }

  // channelspec LARROW
  private static boolean connection_1_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "connection_1_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = channelspec(b, l + 1);
    r = r && consumeToken(b, LARROW);
    exit_section_(b, m, null, r);
    return r;
  }

  // leftgatespec BIARROW (channelspec BIARROW)? rightgatespec
  private static boolean connection_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "connection_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = leftgatespec(b, l + 1);
    r = r && consumeToken(b, BIARROW);
    r = r && connection_2_2(b, l + 1);
    r = r && rightgatespec(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (channelspec BIARROW)?
  private static boolean connection_2_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "connection_2_2")) return false;
    connection_2_2_0(b, l + 1);
    return true;
  }
